runfix: Add a wrapper to group creation component to fix broken styles

--- a/src/style/components/user-list.less
+++ b/src/style/components/user-list.less
@@ -17,7 +17,7 @@
  *
  */
 
-user-list,
+.user-list-wrapper,
 service-list {
   display: block;
 
